cabal-version:      2.4
name:               my-palantype
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Palantype.Common
      , Palantype.Common.RawSteno
      , Palantype.DE
      , Palantype.DE.Keys
      , Palantype.EN
      , Palantype.EN.Keys

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.12.0.0
      , aeson
      , containers
      , json5hs
      , parsec
      , proxied
      , text
      , text-show
    hs-source-dirs:   src
    default-language: Haskell2010
