cabal-version:      2.4
name:               my-palantype
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Palantype.Common
        Palantype.Common.Dictionary
      , Palantype.Common.Indices
      , Palantype.Common.Primitives
      , Palantype.Common.RawSteno
      , Palantype.DE
      , Palantype.DE.Keys
      , Palantype.DE.Pattern
      , Palantype.EN
      , Palantype.EN.Keys
    default-extensions:
        DerivingStrategies
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
    build-depends:
        base
      , aeson
      , bytestring
      , bytestring-trie
      , containers
      , deepseq
      , file-embed
      , hashable
      , unordered-containers
      , parsec
      , proxied
      , servant
      , text
      , text-show
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists

      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations
