cabal-version:      2.4
name:               my-palantype
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ruben Moor
maintainer:         ruben.moor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Palantype.Common
      Palantype.Common.AutoDoc
      Palantype.Common.Class
      Palantype.Common.Dictionary.Commands
      Palantype.Common.Dictionary.CommandsFKeys
      Palantype.Common.Dictionary.Numbers
      Palantype.Common.Dictionary.Plover
      Palantype.Common.Dictionary.Shared
      Palantype.Common.Dictionary.Special
      Palantype.Common.Indices
      Palantype.Common.Internal
      Palantype.Common.Internal.Instances
      Palantype.Common.KeyIndex
      Palantype.Common.SystemLang
      Palantype.Common.Primitives
      Palantype.Common.Primitives.Types
      Palantype.Common.RawSteno
      Palantype.Common.RawSteno.Type
      Palantype.Common.RenderPlover
      Palantype.Common.Stage
      Palantype.Common.TH
      Palantype.DE
      Palantype.DE.FingerSpelling
      Palantype.DE.Keys
      Palantype.EN
      Palantype.EN.Keys
    default-extensions:
        DerivingStrategies
        LambdaCase
        NoImplicitPrelude
        OverloadedStrings
        StrictData
    build-depends:
        base
      , aeson
      , bytestring
      , bytestring-trie
      , containers
      , data-default
      , deepseq
      , file-embed
      , hashable
      , http-api-data
      , lens
      , loch-th
      , parsec
      , proxied
      , safe
      , servant
      , template-haskell
      , text
      , text-show
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:
      -Weverything

      -- enable the missing export lists warning to define proper interfaces
      -Wno-missing-export-lists

      -Wno-missing-import-lists
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
      -Wno-monomorphism-restriction
      -Wno-missing-local-signatures
      -Wno-all-missed-specialisations
      -Wno-missed-specialisations

test-suite my-palantype-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        base
      , containers
      , HUnit
      , my-palantype
      , text
      , text-show
